# Twitter-Sentiment-Analysis-in-Cpp-vs-Python

./: README.md
C++ Sentiment Analysis/: CMakeLists.txt  DSString.cpp  DSString.h  DSVector.h  DataFrame.h  README.md  Twitter.cpp  Twitter.h  Word.cpp  Word.h  main.cpp
C++ Sentiment Analysis/data/: train_dataset_20k.csv
Python Sentiment Analysis/: README.md  sentiment_analysis.ipynb
Python Sentiment Analysis/data/: test_dataset_10k.csv  test_dataset_sentiment_10k.csv  train_dataset_20k.csv
